--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 *.html linguist-detectable=false
+*.java linguist-detectable=false
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+*.xml linguist-detectable=false
